--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
         { name: "Games", url: "/static/games.html" },
         { name: "Proxies", url: "/static/proxies.html" },
         { name: "Support", url: "/static/support.html" },
+        { name: "Subway Surfers", url: "/hold/subway.html"},
+        { name: "Slope", url: "/hold/slope.html"},
     ];
 
     const searchBar = document.getElementById('search-bar');
