--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             color: white;
             text-decoration: none;
             font-size: 1.2rem;
-            padding: 10px 15px;
+            padding: 5px 15px;
             transition: 0.3s;
             text-align: center;
             flex-grow: 1;
@@ -243,6 +243,7 @@
         <a href="/static/games.html">Games</a>
         <a href="/static/proxies.html">Proxies</a>
         <a href="/static/support.html">Support</a>
+        <a href="/static/chat.html">Chat</a>
         <button id="openBlanker">Open Site</button>
         <script>
             document.getElementById("openBlanker").addEventListener("click", openInBlank);
