--- a/static/chat.html
+++ b/static/chat.html
@@ -126,7 +126,7 @@
     <!-- Home Page -->
     <div id="home-page" class="home-container">
         <h1>Enter Chat Room Code</h1>
-        <input id="room-code" type="text" placeholder="Enter room code (pub, support)"/>
+        <input id="room-code" type="text" placeholder="Enter room code pub for public room"/>
         <button onclick="joinRoom()">Join Room</button>
     </div>
 
