--- a/static/support.html
+++ b/static/support.html
@@ -101,7 +101,7 @@
             <h2>Get in Touch</h2>
             <p>Email: <a href="mailto:projectwarrant@outlook.com">projectwarrant@outlook.com</a></p>
             <p>Phone: +1 (205) 312-9364</p>
-            <p>Chat: <a href="https://placeholder.com" target="_blank">Project Warrant Chat</a></p>
+            <p>Chat: <a href="/static/chat.html" target="_blank">Support Chat</a></p>
         </div>
     </div>
     <div class="nav-bar">
