--- a/static/chat.html
+++ b/static/chat.html
@@ -122,6 +122,9 @@
         }
     </style>
 </head>
+<div>
+<a href="/index.html">Home</a>
+</div>
 <body>
     <!-- Home Page -->
     <div id="home-page" class="home-container">
