--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <a href="/static/proxies.html">Proxies</a>
         <a href="/static/support.html">Support</a>
         <a href="/static/chat.html">Chat</a>
-        <button id="openBlanker">Open Site</button>
+        <button id="openBlanker">Blanker</button>
         <script>
             document.getElementById("openBlanker").addEventListener("click", openInBlank);
         </script>
