--- a/static/proxies.html
+++ b/static/proxies.html
@@ -129,7 +129,7 @@
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Doge Proxy</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Space Proxy</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Interstellar Proxy</a></div>
-            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Mocha Proxy</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://recycle.wspaperbag.com/')">Mocha Proxy</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Invidious (Youtube)</a></div>
         </div>
     </div>
