--- a/static/games.html
+++ b/static/games.html
@@ -111,7 +111,7 @@
             <div class='game-card'><a href='/hold/driftboss.html'><img src='/img/driftboss.png' alt='Game'><h3>Drift Boss</h3></a></div>
             <div class='game-card'><a href='/hold/gunspin.html'><img src='/img/gunspin.png' alt='Game'><h3>Gun Spin</h3></a></div>
             <div class='game-card'><a href='/hold/subway.html'><img src='/img/subway.png' alt='Game'><h3>Subway Surfers</h3></a></div>
-            <div class='game-card'><a href='game33.html'><img src='game33.jpg' alt='Game'><h3>Placeholder</h3></a></div>
+            <div class='game-card'><a href='/hold/whg.html'><img src='/img/whg.png' alt='Game'><h3>World's Hardest Game</h3></a></div>
             <div class='game-card'><a href='game34.html'><img src='game34.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game35.html'><img src='game35.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game36.html'><img src='game36.jpg' alt='Game'><h3>Placeholder</h3></a></div>
