--- a/static/games.html
+++ b/static/games.html
@@ -112,8 +112,8 @@
             <div class='game-card'><a href='/hold/gunspin.html'><img src='/img/gunspin.png' alt='Game'><h3>Gun Spin</h3></a></div>
             <div class='game-card'><a href='/hold/subway.html'><img src='/img/subway.png' alt='Game'><h3>Subway Surfers</h3></a></div>
             <div class='game-card'><a href='/hold/whg.html'><img src='/img/whg.png' alt='Game'><h3>World's Hardest Game</h3></a></div>
-            <div class='game-card'><a href='game34.html'><img src='game34.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game35.html'><img src='game35.jpg' alt='Game'><h3>Placeholder</h3></a></div>
+            <div class='game-card'><a href='/hold/cluster.html'><img src='/img/cluster-rush.png' alt='Game'><h3>Cluster Rush</h3></a></div>
+            <div class='game-card'><a href='/hold/sandtris.html'><img src='/img/sandtris.png' alt='Game'><h3>Sandtris</h3></a></div>
             <div class='game-card'><a href='game36.html'><img src='game36.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game37.html'><img src='game37.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game38.html'><img src='game38.jpg' alt='Game'><h3>Placeholder</h3></a></div>
