--- a/static/support.html
+++ b/static/support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact & Support - Project Warrant PV</title>
+    <title>Contact & Support - Project Warrant</title>
     <style>
         body {
             margin: 0;
