--- a/hold/driftboss.html
+++ b/hold/driftboss.html
@@ -10,7 +10,7 @@
                         <a href="/static/proxies.html">Proxies</a>
                         <a href="/static/support.html">Support</a>
                 </div>
-                        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="/hold/test/driftbosssource.html" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
+                        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://w-pv-26.vercel.app/hold/test/driftbosssource.html" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
                         <style> body {
                             margin: 0;
                             overflow-x: hidden;
