--- a/static/games.html
+++ b/static/games.html
@@ -96,6 +96,12 @@
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
         }
     </style>
+        <script>
+            function openInBlank(url) {
+                const newTab = window.open("about:blank", "_blank");
+                newTab.document.write(`<iframe src="${url}" style="position:fixed;top:0;left:0;width:100vw;height:100vh;border:none;"></iframe>`);
+            }
+        </script>
 </head>
 <body>
     <canvas id="galaxy"></canvas>
@@ -114,6 +120,7 @@
             <div class='game-card'><a href='/hold/whg.html'><img src='/img/whg.png' alt='Game'><h3>World's Hardest Game</h3></a></div>
             <div class='game-card'><a href='/hold/cluster.html'><img src='/img/cluster-rush.png' alt='Game'><h3>Cluster Rush</h3></a></div>
             <div class='game-card'><a href='/hold/sandtris.html'><img src='/img/sandtris.png' alt='Game'><h3>Sandtris</h3></a></div>
+            <div class='game-card'><a href='#' onclick="openInBlank('https://1v1lool.vercel.app')"><img src='/img/slope.png' alt='Game'><h3>1v1.LOL</h3></a></div>
             <div class='game-card'><a href='game36.html'><img src='game36.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game37.html'><img src='game37.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game38.html'><img src='game38.jpg' alt='Game'><h3>Placeholder</h3></a></div>
