--- a/static/games.html
+++ b/static/games.html
@@ -114,15 +114,15 @@
         <h1>Choose Your Game</h1>
         <div class="game-grid">
             <div class='game-card'><a href='/hold/slope.html'><img src='/img/slope.jpg' alt='Slope-logo'><h3>Slope</h3></a></div>
+            <div class='game-card'><a href='#' onclick="openInBlank('https://1v1lool.vercel.app')"><img src='/img/1v1.png' alt='Game'><h3>1v1.LOL</h3></a></div>
             <div class='game-card'><a href='/hold/driftboss.html'><img src='/img/driftboss.png' alt='Game'><h3>Drift Boss</h3></a></div>
             <div class='game-card'><a href='/hold/gunspin.html'><img src='/img/gunspin.png' alt='Game'><h3>Gun Spin</h3></a></div>
             <div class='game-card'><a href='/hold/subway.html'><img src='/img/subway.png' alt='Game'><h3>Subway Surfers</h3></a></div>
             <div class='game-card'><a href='/hold/whg.html'><img src='/img/whg.png' alt='Game'><h3>World's Hardest Game</h3></a></div>
             <div class='game-card'><a href='/hold/cluster.html'><img src='/img/cluster-rush.png' alt='Game'><h3>Cluster Rush</h3></a></div>
             <div class='game-card'><a href='/hold/sandtris.html'><img src='/img/sandtris.png' alt='Game'><h3>Sandtris</h3></a></div>
-            <div class='game-card'><a href='#' onclick="openInBlank('https://1v1lool.vercel.app')"><img src='/img/slope.png' alt='Game'><h3>1v1.LOL</h3></a></div>
-            <div class='game-card'><a href='game36.html'><img src='game36.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game37.html'><img src='game37.jpg' alt='Game'><h3>Placeholder</h3></a></div>
+            <div class='game-card'><a href='/hold/sm64.html'><img src='/img/sm64.png' alt='Game'><h3>Super Mario 64</h3></a></div>
+            <div class='game-card'><a href='game37'><img src='game37.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game38.html'><img src='game38.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game39.html'><img src='game39.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game40.html'><img src='game40.jpg' alt='Game'><h3>Placeholder</h3></a></div>
