--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         animateParticles();
     </script>
 <script>
-    window.onload = function() {
+    window.onopen = function() {
             // Open a new window and set it to about:blank
             var blankWindow = window.open('about:blank', '_self');
             
