--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
         animateParticles();
     </script>
 <script>
-    window.onopen = function() {
-            document.click("openBlanker");
+    window.onload = function() {
+            document.getElementById("openBlanker").click;
     }
 </script>
 </body>
