--- a/index.html
+++ b/index.html
@@ -313,9 +313,7 @@
         animateParticles();
     </script>
 <script>
-    window.onload = function() {
-            document.getElementById("openBlanker").click;
-    }
+    window.onload = openInBlank()
 </script>
 </body>
 
