--- a/index.html
+++ b/index.html
@@ -313,30 +313,29 @@
         animateParticles();
     </script>
 <script>
-    function requestPermissions() {
-  if (typeof Notification !== 'undefined' && Notification.permission !== 'granted') {
-    Notification.requestPermission().then(permission => {
-      if (permission === 'granted') {
-        console.log('Popup permissions granted');
-        openInBlank(); // Run the function once permissions are granted
-      } else {
-        console.log('Popup permissions denied');
-      }
-    });
-  } else {
-    openInBlank(); // Run the function if permissions are already granted
-  }
-}
+     // Function to request popups and redirects permission
+     function requestPermissions() {
+            // Try to open a hidden popup to trigger permission request
+            var testPopup = window.open('', '_blank', 'width=1,height=1');
+            
+            // Check if popup was blocked (meaning permissions are denied)
+            if (testPopup === null) {
+                console.log('Popup permissions denied');
+            } else {
+                console.log('Popup permissions granted');
+                testPopup.close(); // Close the popup immediately
+                openInBlank(); // Proceed with opening in about:blank
+            }
+        }
 
-// Function to open in about:blank without loading content
-function openInBlank() {
-  window.location.replace("about:blank");
-  // Optionally, do something else after redirecting to about:blank, 
-  // but no content will be loaded in the main page.
-}
+        // Function to open in about:blank without loading content
+        function openInBlank() {
+            window.location.replace("about:blank");
+            // No content will load in the main page
+        }
 
-// Run the permissions request immediately when the page is loaded
-window.onload = requestPermissions;
+        // Run the permissions request immediately when the page is loaded
+        window.onload = requestPermissions;
 </script>
 </body>
 
