--- a/static/games.html
+++ b/static/games.html
@@ -123,8 +123,8 @@
             <div class='game-card'><a href='/hold/cluster.html'><img src='/img/cluster-rush.png' alt='Game'><h3>Cluster Rush</h3></a></div>
             <div class='game-card'><a href='/hold/sandtris.html'><img src='/img/sandtris.png' alt='Game'><h3>Sandtris</h3></a></div>
             <div class='game-card'><a href='/hold/sm64.html'><img src='/img/sm64.png' alt='Game'><h3>Super Mario 64</h3></a></div>
-            <div class='game-card'><a href='game37'><img src='game37.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game38.html'><img src='game38.jpg' alt='Game'><h3>Placeholder</h3></a></div>
+            <div class='game-card'><a href='/hold/geometrydash.html'><img src='/img/geometry2.png' alt='Game'><h3>Geometry Dash</h3></a></div>
+            <div class='game-card'><a href='/hold/craftmine.html'><img src='/img/minecraft.png' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game39.html'><img src='game39.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game40.html'><img src='game40.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game41.html'><img src='game41.jpg' alt='Game'><h3>Placeholder</h3></a></div>
