--- a/static/games.html
+++ b/static/games.html
@@ -124,7 +124,7 @@
             <div class='game-card'><a href='/hold/sandtris.html'><img src='/img/sandtris.png' alt='Game'><h3>Sandtris</h3></a></div>
             <div class='game-card'><a href='/hold/sm64.html'><img src='/img/sm64.png' alt='Game'><h3>Super Mario 64</h3></a></div>
             <div class='game-card'><a href='/hold/geometrydash.html'><img src='/img/geometry2.png' alt='Game'><h3>Geometry Dash</h3></a></div>
-            <div class='game-card'><a href='/hold/craftmine.html'><img src='/img/minecraft.png' alt='Game'><h3>Placeholder</h3></a></div>
+            <div class='game-card'><a href='/hold/craftmine.html'><img src='/img/minecraft.png' alt='Game'><h3>Craftmine or smth idk</h3></a></div>
             <div class='game-card'><a href='game39.html'><img src='game39.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game40.html'><img src='game40.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game41.html'><img src='game41.jpg' alt='Game'><h3>Placeholder</h3></a></div>
