--- a/static/chat.html
+++ b/static/chat.html
@@ -1,1 +1,1 @@
-<iframe src="https://chat-site-1ti5zzlgq-elliot-davis-projects.vercel.app/" height="100%" width="100%"></iframe>
+<iframe src="https://chat-site-inky.vercel.app/" height="100%" width="100%"></iframe>
