--- a/hold/craftmine.html
+++ b/hold/craftmine.html
@@ -1,10 +1,10 @@
-<div class="nav-bar"></div>
+<div class="nav-bar">
     <a href="/index.html">Project Warrant</a>
             <a href="/static/games.html">Games</a>
             <a href="/static/proxies.html">Proxies</a>
             <a href="/static/support.html">Support</a>
     </div>
-            <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://eaglercraftx1-8.netlify.app/eagler-files/1.8/main/" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
+            <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://blooketbot.glitch.me" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
             <style> body {
                 margin: 0;
                 overflow-x: hidden;
