--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
 
     <div class="nav-bar">
         <a href="index.html">Project Warrant</a>
-        <a href="/static/games.html">testing123</a>
+        <a href="/static/games.html">testing123</a> 
+        <!-- goguardian x3 ai blocks the word games from the site but it wasnt like this last week? weird ass school man -->
         <a href="/static/proxies.html">Proxies</a>
         <a href="/static/support.html">Support</a>
         <a href="/static/chat.html">Chat</a>
