--- a/hold/geometrydash.html
+++ b/hold/geometrydash.html
@@ -1,6 +1,6 @@
 <div class="nav-bar"></div>
     <a href="/index.html">Project Warrant</a>
-            <a href="/static/games.html">Games</a>
+            <a href="/static/games.html">test123</a>
             <a href="/static/proxies.html">Proxies</a>
             <a href="/static/support.html">Support</a>
     </div>
