--- a/static/support.html
+++ b/static/support.html
@@ -106,7 +106,7 @@
     </div>
     <div class="nav-bar">
         <a href="/index.html">Project Warrant</a>
-        <a href="/static/games.html">Fun</a>
+        <a href="/static/games.html">G@mes</a>
         <a href="/static/proxies.html">Proxies</a>
     </div>
     <script>
