--- a/hold/gunspin.html
+++ b/hold/gunspin.html
@@ -4,7 +4,7 @@
           <a href="/static/proxies.html">Proxies</a>
           <a href="/static/support.html">Support</a>
   </div>
-          <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="w-pv-26.vercel.app/hold/test/gunspinn.html" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
+          <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="w-pv-26.vercel.app/hold/gunspinn.html" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
           <style> body {
               margin: 0;
               overflow-x: hidden;
