--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
     <div class="nav-bar">
         <a href="index.html">Project Warrant</a>
-        <a href="/static/games.html">G@mes</a> 
+        <a href="/static/games.html">Games</a>
         <a href="/static/proxies.html">Proxies</a>
         <a href="/static/support.html">Support</a>
         <button id="openBlanker">Blanker</button>
