--- a/hold/gunspin.html
+++ b/hold/gunspin.html
@@ -1,10 +1,10 @@
 <div class="nav-bar">
   <a href="/index.html">Project Warrant</a>
-          <a href="/static/games.html">test123</a>
+          <a href="/static/games.html">Grades</a>
           <a href="/static/proxies.html">Proxies</a>
           <a href="/static/support.html">Support</a>
   </div>
-          <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="w-pv-26.vercel.app/hold/gunspinn.html" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
+          <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://game-links-type-shi.vercel.app/gunspin.html" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
           <style> body {
               margin: 0;
               overflow-x: hidden;
