--- a/static/games.html
+++ b/static/games.html
@@ -125,18 +125,19 @@
             <div class='game-card'><a href='/hold/sm64.html'><img src='/img/sm64.png' alt='Game'><h3>Super Mario 64</h3></a></div>
             <div class='game-card'><a href='/hold/geometrydash.html'><img src='/img/geometry2.png' alt='Game'><h3>Geometry Dash</h3></a></div>
             <div class='game-card'><a href='/hold/craftmine.html'><img src='/img/minecraft.png' alt='Game'><h3>Minecraft</h3></a></div>
-            <div class='game-card'><a href='game39.html'><img src='game39.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game40.html'><img src='game40.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game41.html'><img src='game41.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game42.html'><img src='game42.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game43.html'><img src='game43.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game44.html'><img src='game44.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game45.html'><img src='game45.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game46.html'><img src='game46.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game47.html'><img src='game47.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game48.html'><img src='game48.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game49.html'><img src='game49.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game50.html'><img src='game50.jpg' alt='Game'><h3>Placeholder</h3></a></div>
+            <div class='game-card'><a href='/hold/whitepenroad.html'><img src='/img/kkk.png' alt='Game'><h3>White Pen Road</h3></a></div>
+            <div class='game-card'><a href='/hold/snake.html'><img src='/img/snake.png' alt='Game'><h3>Snake Hacked</h3></a></div>
+            <div class='game-card'><a href='/hold/tomb/html'><img src='/img/tomb.png' alt='Game'><h3>Tomb Of The Mask</h3></a></div>
+            <div class='game-card'><a href='/hold/crossy.html'><img src='/img/crossy.png' alt='Game'><h3>Crossy Road</h3></a></div>
+            <div class='game-card'><a href='/hold/ovo.html'><img src='/img/ovo.png' alt='Game'><h3>OVO</h3></a></div>
+            <div class='game-card'><a href='/hold/ovo2.html'><img src='/img/ovo2.png' alt='Game'><h3>OVO 2</h3></a></div>
+            <div class='game-card'><a href='/hold/rooftop.html'><img src='/img/rooftop.png' alt='Game'><h3>Rooftop Snipers</h3></a></div>
+            <div class='game-card'><a href='/hold/mario.html'><img src='/img/mario.png' alt='Game'><h3>Super Mario Bros.</h3></a></div>
+            <div class='game-card'><a href='/hold/construct.html'><img src='/img/construct.png' alt='Game'><h3>Super Mario Construct</h3></a></div>
+            <div class='game-card'><a href='/hold/isaac.html'><img src='/img/isaac.png' alt='Game'><h3>The Binding Of Isaac</h3></a></div>
+            <div class='game-card'><a href='/hold/retrobowl.html'><img src='/img/retrobowl.png' alt='Game'><h3>Retro Bowl</h3></a></div>
+            <div class='game-card'><a href='/hold/tunnel.html'><img src='/img/tunnel.png' alt='Game'><h3>Tunnel Rush</h3></a></div>
+            <div class='game-card'><a href='/hold/deathrun.html'><img src='/img/deathrun.png' alt='Game'><h3>Deathrun 3D/h3></a></div>
         </div>
     </div>
 
