--- a/static/games.html
+++ b/static/games.html
@@ -137,7 +137,7 @@
             <div class='game-card'><a href='/hold/isaac.html'><img src='/img/isaac.png' alt='Game'><h3>The Binding Of Isaac</h3></a></div>
             <div class='game-card'><a href='/hold/retrobowl.html'><img src='/img/retrobowl.png' alt='Game'><h3>Retro Bowl</h3></a></div>
             <div class='game-card'><a href='/hold/tunnel.html'><img src='/img/tunnel.png' alt='Game'><h3>Tunnel Rush</h3></a></div>
-            <div class='game-card'><a href='/hold/deathrun.html'><img src='/img/deathrun.png' alt='Game'><h3>Deathrun 3D/h3></a></div>
+            <div class='game-card'><a href='/hold/deathrun.html'><img src='/img/deathrun.png' alt='Game'><h3>Deathrun 3D</h3></a></div>
         </div>
     </div>
 
