--- a/hold/gunspin.html
+++ b/hold/gunspin.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/style.css">
 <div class="nav-bar">
   <a href="/index.html">Project Warrant</a>
           <a href="/static/games.html">Grades</a>
