--- a/hold/tunnel.html
+++ b/hold/tunnel.html
@@ -1,5 +1,5 @@
     <!-- port from schoolarcade soon--> 
-
+    <link rel="stylesheet" href="/css/style.css">
 <div class="nav-bar"></div>
     <a href="/index.html">Project Warrant</a>
             <a href="/static/games.html">test123</a>
