--- a/hold/blooket/charleswarrengrier.html
+++ b/hold/blooket/charleswarrengrier.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/style.css">
 <div class="nav-bar"></div>
   <a href="/index.html">Project Warrant</a>
           <a href="/static/games.html">Games</a>
