--- a/hold/blooket/charleswarrengrier.html
+++ b/hold/blooket/charleswarrengrier.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/style.css">
 <div class="nav-bar"></div>
   <a href="/index.html">Project Warrant</a>
-          <a href="/static/games.html">Games</a>
+          <a href="/static/games.html">Grades</a>
           <a href="/static/proxies.html">Proxies</a>
           <a href="/static/support.html">Support</a>
   </div>
@@ -126,3 +126,4 @@
               }
           });    
           </script>
+          <script src="/js/style.js"></script>
