--- a/hold/tunnel.html
+++ b/hold/tunnel.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="/css/style.css">
 <div class="nav-bar"></div>
     <a href="/index.html">Project Warrant</a>
-            <a href="/static/games.html">test123</a>
+            <a href="/static/games.html">Grades</a>
             <a href="/static/proxies.html">Proxies</a>
             <a href="/static/support.html">Support</a>
     </div>
@@ -127,3 +127,4 @@
                 }
             });    
             </script>
+            <script src="/js/style.js"></script>
