--- a/hold/tunnel.html
+++ b/hold/tunnel.html
@@ -1,3 +1,4 @@
+<script src="/js/debug.js"></script>
     <!-- port from schoolarcade soon--> 
     <link rel="stylesheet" href="/css/style.css">
 <div class="nav-bar"></div>
