--- a/hold/blooket/charleswarrengrier.html
+++ b/hold/blooket/charleswarrengrier.html
@@ -1,3 +1,4 @@
+<script src="/js/debug.js"></script>
 <link rel="stylesheet" href="/css/style.css">
 <div class="nav-bar"></div>
   <a href="/index.html">Project Warrant</a>
