--- a/hold/sandtris.html
+++ b/hold/sandtris.html
@@ -1,3 +1,4 @@
+<script src="/js/debug.js"></script>
 <link rel="stylesheet" href="/css/style.css">
 <div class="nav-bar">
     <a href="/index.html">Project Warrant</a>
