--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
         <a href="/static/proxies.html">Proxies</a>
         <a href="/static/support.html">Support</a>
         <button id="openBlanker">Blanker</button>
+        <button id="openEruda">Dev tools</button>
         <script>
             document.getElementById("openBlanker").addEventListener("click", openInBlank);
         </script>
